Lazy loading, bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,22 @@
 
 <html lang="en">
 
-
   <head>
-
-
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Gallery of photos made by Oliwier Pakuła" />
+    <meta property="og:site_name" content="Oliwier Pakuła" />
+    <meta property="og:title" content="Oliwier Pakuła" />
+    <meta property="og:description" content="Gallery of photos made by Oliwier Pakuła."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>Oliwier Pakuła</title>
-
-
   </head>
 
   <body>
-
-
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-
   </body>
 
-  
 </html>
